working chat classic facet

--- a/client/fields.jade
+++ b/client/fields.jade
@@ -689,7 +689,7 @@ template(name='multi_doc_edit')
             i.icon(class=icon)
         |#{title} #{label}
     each choices
-        .ui.circular.button.select_choice(class=choice_class)
+        .ui.circular.compact.button.select_choice(class=choice_class)
             if icon
                 i.grey.icon(class=icon)
             |#{title}
