--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -1,7 +1,7 @@
 template(name='comments')
     .ui.grey.header
         i.chat.icon
-        |Comments
+        |comments
     if currentUser
         .ui.fluid.icon.input
             i.plus.icon
@@ -25,7 +25,7 @@ template(name='events_column')
         h4.active.title
             // +icolor name='edit-property' classes='ui inline image'
             i.rss.icon
-            | Log
+            | log
             i.dropdown.icon
         .active.content
             .ui.feed
@@ -48,7 +48,7 @@ template(name='follow')
     .ui.segment
         .ui.header
             i.user.plus.icon
-            |Follow
+            |follow
         +user_list_toggle key='follower_ids' icon='rss' add_label='Follow' remove_label='Unfollow' color='blue'
 
 
@@ -66,7 +66,7 @@ template(name='user_list_info')
 template(name='view_full_button')
     a.ui.button.ui.icon.button(href="/view/#{_id}" class=classes data-tooltip='View Full')
         i.double.icon
-        |View
+        |view
 
 template(name='user_status')
     if online 
@@ -121,7 +121,7 @@ template(name='big_user_card')
 
 
 template(name='user_info')
-    a.ui.small.circular.button.item(href="/user/#{user.username}/")
+    a.ui.small.circular.basic.compact.button.item(href="/user/#{user.username}/")
         //- if user.image_id
         //-     img.ui.avatar.image(src="{{c.url user.image_id width=100 height=100 gravity='face' crop='fill'}}")
         //- |#{user.first_name} #{user.last_name}
@@ -135,7 +135,7 @@ template(name='role_editor')
 
 template(name='author_info')
     with author
-        a.ui.circular.button(href="/user/#{username}")
+        a.ui.circular.compact.basic.button(href="/user/#{username}")
             if image_id
                 img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
              by #{first_name} #{last_name}
@@ -156,10 +156,12 @@ template(name='user_list_toggle')
 template(name='voting')
     if points
         strong #{points}
-    i.thumbs.up.circular.link.icon.upvote(class=upvote_class title='Upvote')
+    .ui.circular.icon.basic.button.upvote(class=upvote_class title='upvote')
+        i.thumbs.up.icon
     each upvoter_ids
         +user_info
-    i.thumbs.down.circular.link.icon.downvote(class=downvote_class title='Downvote')
+    .ui.circular.icon.basic.button.downvote(class=downvote_class title='downvote')
+        i.thumbs.down.icon
     each downvoter_ids
         +user_info
 
@@ -171,9 +173,9 @@ template(name='view_button')
 
 
 template(name='remove_button')
-    a.ui.circular.basic.button.remove(title='Delete')
+    a.ui.circular.basic.icon.button.remove(title='Delete')
         i.remove.red.icon
-        |Delete
+        //- |Delete
 
 template(name='add_button')
     a.ui.button.add(title='Add')
@@ -191,7 +193,7 @@ template(name='add_button')
 template(name='save_button')
     a.ui.button.large.icon.save(title='Save' href="/m/#{model}/#{_id}/view")
         i.checkmark.green.icon
-        |Save
+        |save
 
 template(name='toggle_button')
     .ui.icon.toggle.button(title=label)
@@ -203,7 +205,7 @@ template(name='toggle_button')
 template(name='view_user_button')
     .view_user.view(title="view #{username}")
         i.play.icon
-        |View
+        |view
 
 template(name='add_model_button')
     .ui.icon.button.add(title="add #{model}")
