--- a/client/chat.jade
+++ b/client/chat.jade
@@ -27,7 +27,7 @@ template(name='chat_list_item')
                             +user_status
             .description
                 each tags
-                    .ui.small.label #{this}
+                    .ui.small.basic.circular.label #{this}
             .description
                 // strong {{cutString last_message.body 100}}
                 strong {{last_message.body}}
@@ -63,11 +63,11 @@ template(name='chat_message')
                     i.remove.link.circular.icon.delete_message(title='delete message')
                 else
                     if read
-                        i.envelope.open.outline.link.circular.icon.mark_unread(title='mark unread')
+                        i.envelope.open.outline.link.circular.large.icon.mark_unread(title='mark unread')
                     else
-                        i.mail.link.outline.circular.icon.mark_read(title='mark read')
+                        i.mail.link.outline.circular.large.icon.mark_read(title='mark read')
                 each readers
-                    .ui.tiny.label(title="Read by #{username}") #{username}
+                    .ui.tiny.basic.circular.label(title="Read by #{username}") #{username}
                     // img.ui.avatar.image(src="{{c.url image_id width=50 height=50 gravity='face' crop='fill'}}")
                                                 
 
@@ -76,22 +76,22 @@ template(name='view_chats')
         .row
             .four.wide.column
                 //- .ui.circular.label(title='Unread') #{unread_message_count} Unread
-                .ui.icon.circular.button#create_chat(title='new channel')
+                .ui.icon.circular.basic.button#create_chat(title='new channel')
                     i.plus.large.icon
-                // .unread_icon(data-tooltip='Unread Messages' data-position='bottom center')
-                //     i.secured-letter.icon
-                // +theme_tag_filter type='chat'
-                // +participant_filter type='chat'
+                .unread_icon(data-tooltip='Unread Messages' data-position='bottom center')
+                    i.secured-letter.icon
+                +cloud filter='chat'
+                //- +participant_filter type='chat'
                 +chat_list
-                //- .ui.small.header Viewing: 
-                //-     if viewing_published
-                //-         #view_private_chats.ui.button 
-                //-             i.unhide.icon
-                //-             |Published
-                //-     if viewing_private
-                //-         #view_published_chats.ui.button 
-                //-             i.lock.icon
-                //-             |Private
+                .ui.small.header viewing: 
+                    if viewing_published
+                        #view_private_chats.ui.button 
+                            i.unhide.icon
+                            |published
+                    if viewing_private
+                        #view_published_chats.ui.button 
+                            i.lock.icon
+                            |private
             .twelve.wide.column
                 with selected_chat
                     +view_chat
@@ -108,22 +108,22 @@ template(name='view_chat')
                 +chat_messages_pane this
             .four.wide.column
                 .ui.cloud.segment
-                    //- .ui.small.header 
-                    //-     i.line.chart.icon
-                    //-     |Stats
-                    .ui.small.inline.header #{message_count} messages
-                    .ui.small.inline.header #{unread_message_count} unread
-                    //- .ui.small.header 
-                    //-     i.align.left.icon
-                    //-     |Description
-                    //- |!{content}
+                    .ui.small.header 
+                        i.line.chart.icon
+                        |stats
+                    //- .ui.small.inline.header #{message_count} messages
+                    //- .ui.small.inline.header #{unread_message_count} unread
+                    .ui.small.header 
+                        i.align.left.icon
+                        |description
+                    |!{content}
                     .ui.small.inline.header
-                        |Participants
+                        |participants
                         if currentUser
                             if in_chat
-                                i.sign.in.circular.link.icon.leave_chat(title='Leave')
+                                i.sign.in.circular.link.icon.leave_chat(title='leave')
                             else
-                                i.sign.out.circular.link.icon.join_chat(title='Join')
+                                i.sign.out.circular.link.icon.join_chat(title='join')
                     .ui.relaxed.list
                         each participants
                             .item
@@ -132,39 +132,42 @@ template(name='view_chat')
                                     .header
                                         a(href="/user/#{username}") #{username}
                                         if subscribed
-                                            i.bell.outline.icon(title='Subscribed')
+                                            i.bell.outline.icon(title='subscribed')
                                         else
-                                            i.bell.slash.outline.icon(title='Not Subscribed')
+                                            i.bell.slash.outline.icon(title='not subscribed')
                                     .description
                                         | @#{username}
                                         +user_status
-                    if is_admin
-                        .ui.circular.basic.button.close_chat(title='Close Chat')
+                    if can_edit
+                        .ui.circular.basic.compact.button.close_chat(title='close chat')
                             i.cancel.icon
                             |close chat
-                    .ui.small.header 
+                    .ui.small.inline.grey.header 
                         i.tags.icon
                         | tags
-                    each tags
-                        .ui.large.label.doc_tag #{this}
-                    // +subscribe_button
-                    // +bookmark_button
-                    // unless is_author
-                    //     +resonate_button
-                    //     +thanks_button
-                    // +resonates_list
+                    if can_edit
+                        +array_edit key='tags' label='tags' direct=true
+                    else     
+                        each tags
+                            .ui.large.label.doc_tag #{this}
+                    //- +subscribe_button
+                    //- +bookmark_button
+                    //- unless is_author
+                    //-     +resonate_button
+                    //-     +thanks_button
+                    //- +resonates_list
 
-                    //- .ui.small.header 
-                    //-     i.eye.icon
-                    //-     |Visibility
-                    //- if published
-                    //-     .ui.green.large.label 
-                    //-         i.unlock.icon
-                    //-         | Public
-                    //- else
-                    //-     .ui.large.label 
-                    //-         i.lock.icon
-                    //-         | Private
+                    .ui.small.header 
+                        i.eye.icon
+                        |visibility
+                    if published
+                        .ui.green.large.label 
+                            i.unlock.icon
+                            | public
+                    else
+                        .ui.large.label 
+                            i.lock.icon
+                            | private
                     .ui.small.header started by 
                         img.ui.avatar.image(src="{{c.url author.image_id width=400 height=400 gravity='face' crop='fill'}}")
                         |#{author.username} #{when}
