--- a/client/docs.jade
+++ b/client/docs.jade
@@ -44,9 +44,9 @@ template(name='cloud')
 
 template(name='doc_cloud')
     #cloud.ui.basic.segment.container
-        .ui.left.icon.input
-            i.search.icon
-            +inputAutocomplete settings=settings id="search" class="" autocomplete="off" 
+        //- .ui.left.icon.input
+        //-     i.search.icon
+        //-     +inputAutocomplete settings=settings id="search" class="" autocomplete="off" 
         if selected_tags
             #clear_tags.ui.primary.icon.circular.large.button
                 i.remove.icon
