--- a/client/home.jade
+++ b/client/home.jade
@@ -1,16 +1,11 @@
 template(name='staff')
-    h1.ui.center.aligned.header 
-        i.home.icon
+    h1.ui.center.aligned.grey.header 
+        i.user.shield.icon
         |staff
     .three.column.row
         .column
             +schedule
-            if is_staff
-                .ui.segment 
-                    .ui.header 
-                        i.user.shield.icon
-                        |Staff Calendar
-                    //- iframe(src="https://calendar.google.com/calendar/embed?src=goldrun.page_39ghqgom7er09qdo6k66nv9vuc%40group.calendar.google.com&ctz=America%2FDenver" style="border: 0" width="800" height="600" frameborder="0" scrolling="no")
+        +view_chats
 
 
 template(name='home')
