--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -20,14 +20,14 @@ template(name='login')
                     input.password(type='password')
                 //- if username
                 if logging_in
-                    .ui.fluid.large.black.circular.button.enter(title="Login #{username}" class=enter_class)
+                    .ui.fluid.large.grey.circular.button.enter(title="Login #{username}" class=enter_class)
                         |login #{username}
                         i.right.chevron.icon
                 else
                     if username
                         .ui.center.aligned.basic.segment
                             .ui.small.grey.header no '#{username}' user
-                            a.ui.circular.black.button(href='/register')
+                            a.ui.circular.grey.button(href='/register')
                                 i.user.plus.icon
                                 |register
                 .ui.center.aligned.basic.segment    
