--- a/client/fields.jade
+++ b/client/fields.jade
@@ -387,10 +387,10 @@ template(name='date_edit')
                 |#{title}
             else if label
                 |#{label}
-            else if key
-                |#{key}
-            else
-                |#{this}
+            //- else if key
+            //-     |#{key}
+            //- else
+            //-     |#{this}
         +clear_value                
         input.edit_date(type='date' value=field_value placeholder=placeholder)
 
@@ -416,9 +416,11 @@ template(name='time_edit')
         .ui.small.inline.grey.header
             if title
                 |#{title}
-            else
-                |#{key}
-        +clear_value                
+            else if label
+                |#{label}
+            //- else
+            //-     |#{key}
+        //- +clear_value                
         input.edit_time(type='time' value=field_value placeholder=placeholder)
                 
                 
@@ -457,6 +459,7 @@ template(name='datetime_view')
 
 
 template(name='array_edit')
+    div
     .ui.fluid.input
         .ui.small.inline.grey.header
             if icon
@@ -741,7 +744,7 @@ template(name='single_user_edit')
             |clear #{field_value}
     unless field_value
         .ui.input
-            input#single_user_select_input(type='text' placeholder='Lookup User...')
+            input#single_user_select_input(type='text' placeholder='lookup user...')
             each selections
                 .ui.large.label
                     |#{first_name} #{last_name} #{username} 
