--- a/client/nav.jade
+++ b/client/nav.jade
@@ -8,7 +8,7 @@ template(name='nav')
         else
             a.header.icon.item(href='/' class="{{isActivePath '/'}}")
                 i.grey.home.large.icon
-            a.header.item(href='/staff' class="{{isActivePath '/staff'}}")
+            a.icon.item(href='/staff' class="{{isActivePath '/staff'}}")
                 i.grey.user.shield.large.icon
             //- each bookmarked_models
             //-     a.item.set_bookmarked_model(href="/m/#{slug}" class="{{isActivePath '/m/#{slug}'}}" title=title)
