--- a/components/delta/model_doc.jade
+++ b/components/delta/model_doc.jade
@@ -47,7 +47,7 @@ template(name='model_doc_view')
                                 i.blue.pencil.icon
                             .ui.small.header Timestamp Tags
                             each _timestamp_tags
-                                .ui.circular.label #{this}
+                                .ui.circular.basic.label #{this}
                         //- each model.actions
                         //-     +Template.dynamic template=this data=current_doc
                         div
